manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uitodo
spec:
  type: ClusterIP
  selector:
    app: uitodo
  ports:
    - port: 80
      targetPort: 80
