manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uitodo-ingress

spec:
  ingressClassName: azure-application-gateway

  rules:
  - host: uitodo-api.dhoomdhoom.shop
    http: 
      paths:  
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: uitodo
            port:
              number: 80
